modification du titre pour test

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img class="size" src="./image/logoAss.svg" alt="logo">
             </div> 
             <div class="titre">
-                <h1 class="tailletitre">Assitante<br>Numérique</h1>
+                <h1 class="tailletitre">Assitante<br>Numérique Freelance</h1>
                 <h2 class="taillesoustitre">Confidentialité. Engagement. Valeur.</h2>
             </div>
         </header>
