--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <header id="home" class="home">
             <div class="logo">
-                <img class="size" src="./image/logoAss.svg" alt="logo">
+                <img class="sizeLogo" src="./image/logoAss.svg" alt="logo">
             </div> 
             <div class="titre">
                 <h1 class="tailletitre">Assitante<br>Numérique Freelance</h1>
