--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                 <div class="elementprofile2">
                     <a class="boutton" href="#citation">En savoir plus <span class="flecheBas"> ></span></a>
                     <a class="boutton" target="_blank" href="https://drive.google.com/file/d/1q8eaQM-_FcrY8-5AddTYhdtK2bvsM7VF/view" >Mon CV <span class="flecheDroite">></span></a>
-                </div>
+                </div>      
             </div>
         </section>
 <!-----------------------------------------------------------------------SERVICE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
         <section id="service" class="service">
             <div class="titreService">
-                <h2 class="titreservice">Solutions administratives sur mesure.</h2t>
+                <h2 class="titreservice">Solutions administratives sur mesure.</h2>
             </div>    
             <div class="imageService">
                 <div class="listeService">
