Nav Sticky style + breackpoint

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +14,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<!-----------------------------------------------------------------------HEADER----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->    
+    <!-----------------------------------------------------------------------HEADER----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
     <header class="headerBody">
+        <img src="image/iconMenu.svg" alt="icone d'accès au menu" class="iconMenu">
         <div class="sidebar">
             <a class="elementheader" href="#home">Home</a>
             <a class="elementheader" href="#profile">Profile</a>
@@ -23,20 +26,21 @@
             <a class="elementheader" href="#clients">Clients</a>
             <a class="elementheader" href="#contacts">Contacts</a>
         </div>
+
     </header>
-<!------------------------------------------------------------------------HOME------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-    <main>
+    <!------------------------------------------------------------------------HOME------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+    <main class="main">
         <header id="home" class="home">
             <div class="logo">
                 <img class="sizeLogo" src="./image/logoAss.svg" alt="logo">
-            </div> 
+            </div>
             <div class="titre">
                 <h1 class="tailletitre">Assitante<br>Numérique Freelance</h1>
                 <h2 class="taillesoustitre">Confidentialité. Engagement. Valeur.</h2>
             </div>
         </header>
-    
-<!----------------------------------------------------------------------PROFILE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->  
+
+        <!----------------------------------------------------------------------PROFILE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="profile" class="profile">
             <div class="photoprofilebox">
                 <img class="photoprofile" src="./image/photoprofile.png" alt="photo de profile">
@@ -46,15 +50,15 @@
                 <p class="descriptionProfile">Libérez-vous du poids des tâches administratives !<br> Confiez-les à une assistante freelance dévouée pour <br>vous permettre de vous concentrer sur l'essentiel de <br> votre activité.</p>
                 <div class="elementprofile2">
                     <a class="boutton" href="#citation">En savoir plus <span class="flecheBas"> ></span></a>
-                    <a class="boutton" target="_blank" href="https://drive.google.com/file/d/1q8eaQM-_FcrY8-5AddTYhdtK2bvsM7VF/view" >Mon CV <span class="flecheDroite">></span></a>
+                    <a class="boutton" target="_blank" href="https://drive.google.com/file/d/1q8eaQM-_FcrY8-5AddTYhdtK2bvsM7VF/view">Mon CV <span class="flecheDroite">></span></a>
                 </div>
             </div>
         </section>
-<!-----------------------------------------------------------------------SERVICE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
+        <!-----------------------------------------------------------------------SERVICE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
         <section id="service" class="service">
             <div class="titreService">
-                <h2 class="titreservice">Solutions administratives sur mesure.</h2t>
-            </div>    
+                <h2 class="titreservice">Solutions administratives sur mesure.</h2>
+            </div>
             <div class="imageService">
                 <div class="listeService">
                     <div class="elementBlockService">
@@ -86,7 +90,7 @@
                 </div>
             </div>
         </section>
-<!-----------------------------------------------------------------------CLIENTS------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+        <!-----------------------------------------------------------------------CLIENTS------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="clients" class="clients">
             <div class="titreClients">
                 <h2 class="titreclients">Besoin d’un accompagnement renforcé?</h2>
@@ -95,19 +99,20 @@
             <div class="clientsdeux">
                 <div class="imageCollaborateur">
                     <img class="collab" src="./image/formdist.jpg" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
-                    <p class="textecollaborateur">     Accompagnement à distance</p>
+                    <p class="textecollaborateur"> Accompagnement à distance</p>
                 </div>
                 <div class="imageCollaborateur">
                     <img class="collab" src="./image/formgroup.jpg" alt="Trois collaborateurs autour d'une table suivant une formation groupé en présentiel, tous trois sur des appareils numériques">
-                    <p class="textecollaborateur">     Accompagnement en équipe</p>
+                    <p class="textecollaborateur"> Accompagnement en équipe</p>
                 </div>
                 <div class="imageCollaborateur">
                     <img class="collab" src="./image/formun.jpg" alt="un collaborateur suivant une formation individuel.">
-                    <p class="textecollaborateur">     Accompagnement individuel<p>
+                    <p class="textecollaborateur"> Accompagnement individuel
+                        <p>
                 </div>
             </div>
         </section>
-<!----------------------------------------------------------------------CITATION--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------> 
+        <!----------------------------------------------------------------------CITATION-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="citation" class="citation">
             <blockquote class="elementCitation">
                 <p class="textecitation">“<em> Je propose des services complets, tels que la<br> gestion de votre administratif, le développement de <br>votre site vitrine, la création de rapports pertinents,<br>ainsi que la gestion efficace de vos réseaux sociaux,<br> afin d'optimiser votre présence en ligne et renforcer <br>votre impact commercial</em>."</p>
@@ -116,7 +121,7 @@
                 </footer>
             </blockquote>
         </section>
-<!--------------------------------------------------------------------EN SAVOIR PLUS----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+        <!--------------------------------------------------------------------EN SAVOIR PLUS----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section class="enSavoirPlus">
             <div class="elementEnSavoirPus">
                 <h2 class="titreEnSavoirPlus">Optimisez Votre Entreprise et votre vie avec une Assistante Virtuelle !</h2>
@@ -124,10 +129,9 @@
             </div>
             <div class="description">
                 <div class="descriptionEnSavoirPlus">
-                    <h3 class="titreElementDescription">           Administration Expert :</h3>
+                    <h3 class="titreElementDescription"> Administration Expert :</h3>
                     <p class="texteElementDescription">Accueil Téléphonique Professionnel.
-                        <br>
-                        Suivi de dossiers.<br>Saisie de documents.<br>Gestion proactive des réclamations.<br>Achats et Recouvrement.
+                        <br> Suivi de dossiers.<br>Saisie de documents.<br>Gestion proactive des réclamations.<br>Achats et Recouvrement.
                     </p>
                     <h3 class="titreElementDescription">Contact Client et Formations <br>Personnalisées :</h3>
                     <p class="texteElementDescription">Communication fluide et micro-<br>formations sur mesure pour vos <br>besoins spécifiques en accueil et <br>outils numérique tel que Excel, Power BI User, etc...</p>
@@ -147,12 +151,13 @@
                     <p class="texteElementDescriptionDeux">Transformez vos données en informations exploitables avec <br>des rapports clairs et précis. Optez pour des analyse <br>approfondie avec des tableaux de bord interactifs et une <br>organisation optimale des informations.</p>
                     <h3 class="titreElementDescriptionDeux">Polyvalence Informatique :</h3>
                     <p class="texteElementDescriptionDeux">Créer votre site vitrine,vous orientez vers des outils<br>numériques pertinents.Créer vos contenus.<br>Adaptabilité et apprentissage continu pour répondre à <br>toutes les exigences informatiques et numérique qui vous <br>aiderons.</p>
-            
+
                 </div>
             </div>
-            <footer class="footerEnSavoirPlus">En collaborant avec moi, vous obtenez une partenaire dévouée capable de <br>convertir les tâches administratives en occasions de croissance. N'hésitez pas <br>à me contacter pour discuter de la manière dont je peux simplifier et optimiser <br>de façon ponctuelle ou régulière vos opérations quotidiennes.</footer>
+            <footer class="footerEnSavoirPlus">En collaborant avec moi, vous obtenez une partenaire dévouée capable de <br>convertir les tâches administratives en occasions de croissance. N'hésitez pas <br>à me contacter pour discuter de la manière dont je peux simplifier et optimiser
+                <br>de façon ponctuelle ou régulière vos opérations quotidiennes.</footer>
         </section>
-<!----------------------------------------------------------------------CONTACTS-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+        <!----------------------------------------------------------------------CONTACTS-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="contacts" class="contacts">
             <div class="elementContacts">
                 <h2 class="titreContacts">Travaillons ensemble!</h2>
@@ -161,26 +166,27 @@
             </div>
             <div class="elementContactsDeux">
                 <a class="prendreRdv" href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ1VxX5TZ1uw579BOLcnsGYZljfI-Fl5leD5dWDiZst4El4FL7ITpGSCI_aBlL4LadsJ4-WrHVt4?pli=1" target="_blank">
-                   <img class="logoCalender" src="./image/calender.svg" alt="icon d'un calendrier"> 
-                   <p>PRENDRE RDV</p>
+                    <img class="logoCalender" src="./image/calender.svg" alt="icon d'un calendrier">
+                    <p>PRENDRE RDV</p>
                 </a>
                 <p class="texteContact">CONTACT :</p>
                 <div class="logoContacts">
                     <a class="" href="https://mq.linkedin.com/in/djouliana-linon-a2b602210?trk=public_profile_browsemap" target="_blank">
-                        <img class="icon" src="./image/linkedin.svg" alt="icon linkedin"> 
+                        <img class="icon" src="./image/linkedin.svg" alt="icon linkedin">
                     </a>
                     <a class="borderRondIcon" href="https://api.whatsapp.com/send/?phone=596696171811&text&type=phone_number&app_absent=0" target="_blank">
-                        <img class="iconTelephone" src="./image/phone.svg" alt="icon d'un télephone"> 
+                        <img class="iconTelephone" src="./image/phone.svg" alt="icon d'un télephone">
                     </a>
                     <a class="" href="mailto:liyana.pro97@gmail.com" target="_blank">
-                        <img class="icon" src="./image/mail.svg" alt="icon d'une enveloppe"> 
+                        <img class="icon" src="./image/mail.svg" alt="icon d'une enveloppe">
                     </a>
                 </div>
                 <div class="consultezMesTarifs">
                     <a class="mesTarifs" href="https://drive.google.com/file/d/1oha28HCqohvovWQn1XEyP4EU8tdwYG2Y/view" target="_blank">Consultez mes tarifs</a>
                 </div>
             </div>
-        </section>        
+        </section>
     </main>
 </body>
+
 </html>
