modif  titre imagr formation

--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
                 </div>
                 <div class="imageCollaborateur">
                     <img class="collab" src="./image/formun.jpg" alt="un collaborateur suivant une formation individuel.">
-                    <p class="textecollaborateur"> Accompagnement individuel
-                        <p>
+                    <p class="textecollaborateur"> Accompagnement individuel</p>
                 </div>
             </div>
         </section>
