nouvelle section (projets) + organisation code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <!-----------------------------------------------------------------------HEADER----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<!-------------------------------------------------------------------------------HEADER----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
     <header class="headerBody">
         <img src="image/iconMenu.svg" alt="icone d'accès au menu" class="iconMenu">
         <div class="sidebar">
@@ -26,9 +26,8 @@
             <a class="elementheader" href="#clients">Clients</a>
             <a class="elementheader" href="#contacts">Contacts</a>
         </div>
-
     </header>
-    <!------------------------------------------------------------------------HOME------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<!--------------------------------------------------------------------------------HOME------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
     <main class="main">
         <header id="home" class="home">
             <div class="logo">
@@ -39,8 +38,7 @@
                 <h2 class="taillesoustitre">Confidentialité. Engagement. Valeur.</h2>
             </div>
         </header>
-
-        <!----------------------------------------------------------------------PROFILE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<!-----------------------------------------------------------------------------PROFILE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="profile" class="profile">
             <div class="photoprofilebox">
                 <img class="photoprofile" src="./image/photoprofile.png" alt="photo de profile">
@@ -54,7 +52,7 @@
                 </div>
             </div>
         </section>
-        <!-----------------------------------------------------------------------SERVICE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
+<!-----------------------------------------------------------------------------SERVICE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
         <section id="service" class="service">
             <div class="titreService">
                 <h2 class="titreservice">Solutions administratives sur mesure.</h2>
@@ -90,7 +88,7 @@
                 </div>
             </div>
         </section>
-        <!-----------------------------------------------------------------------CLIENTS------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------CLIENTS------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="clients" class="clients">
             <div class="titreClients">
                 <h2 class="titreclients">Besoin d’un accompagnement renforcé?</h2>
@@ -111,7 +109,7 @@
                 </div>
             </div>
         </section>
-        <!----------------------------------------------------------------------CITATION-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<!--------------------------------------------------------------------------CITATION-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="citation" class="citation">
             <blockquote class="elementCitation">
                 <p class="textecitation">“<em> Je propose des services complets, tels que la<br> gestion de votre administratif, le développement de <br>votre site vitrine, la création de rapports pertinents,<br>ainsi que la gestion efficace de vos réseaux sociaux,<br> afin d'optimiser votre présence en ligne et renforcer <br>votre impact commercial</em>."</p>
@@ -120,7 +118,7 @@
                 </footer>
             </blockquote>
         </section>
-        <!--------------------------------------------------------------------EN SAVOIR PLUS----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<!-----------------------------------------------------------------------EN SAVOIR PLUS----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section class="enSavoirPlus">
             <div class="elementEnSavoirPus">
                 <h2 class="titreEnSavoirPlus">Optimisez Votre Entreprise et votre vie avec une Assistante Virtuelle !</h2>
@@ -150,13 +148,41 @@
                     <p class="texteElementDescriptionDeux">Transformez vos données en informations exploitables avec <br>des rapports clairs et précis. Optez pour des analyse <br>approfondie avec des tableaux de bord interactifs et une <br>organisation optimale des informations.</p>
                     <h3 class="titreElementDescriptionDeux">Polyvalence Informatique :</h3>
                     <p class="texteElementDescriptionDeux">Créer votre site vitrine,vous orientez vers des outils<br>numériques pertinents.Créer vos contenus.<br>Adaptabilité et apprentissage continu pour répondre à <br>toutes les exigences informatiques et numérique qui vous <br>aiderons.</p>
-
                 </div>
             </div>
-            <footer class="footerEnSavoirPlus">En collaborant avec moi, vous obtenez une partenaire dévouée capable de <br>convertir les tâches administratives en occasions de croissance. N'hésitez pas <br>à me contacter pour discuter de la manière dont je peux simplifier et optimiser
-                <br>de façon ponctuelle ou régulière vos opérations quotidiennes.</footer>
+            <footer class="footerEnSavoirPlus">
+                <p>En collaborant avec moi, vous obtenez une partenaire dévouée capable de <br>convertir les tâches administratives en occasions de croissance. N'hésitez pas <br>à me contacter pour discuter de la manière dont je peux simplifier et optimiser
+                <br>de façon ponctuelle ou régulière vos opérations quotidiennes.</p>
+            </footer>
         </section>
-        <!----------------------------------------------------------------------CONTACTS-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<!--------------------------------------------------------------------------PROJETS--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+       <section class="projets">
+            <div class="elementProjets">
+                <h2 class="titreElementProjets">Quelques<br> réalisations web</h2>
+                <p class="sous-titreElementProjets">En dehors de ce site bien sur 😎 !</p>
+                <div>
+                    <img class="imageElementProjets" src="./image/creativite.jpg" alt="image représentant la créativité">
+                </div>
+            </div>
+            <div class="elementProjetsDeux">
+                <a class="lienProjet" href="https://liyanasc.github.io/LINONDjouliana_2_03112020/P2_02_Reservia.html" target="_blank">
+                    <h3 class="titreLienProjet">Front-End Reservia</h3>
+                    <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation en ligne compatible tout support.</p>
+                    <p class="SuivrelienProjet">></p>
+                </a>
+                <a class="lienProjet" href="https://liyanasc.github.io/LINONDjouliana_3_08122020/accueil.html" target="_blank">
+                    <h3 class="titreLienProjet">Front-End Oh my food!</h3>
+                    <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de commande en ligne compatible tout support avec animation au survol.</p>
+                    <p class="SuivrelienProjet">></p>
+                </a>
+                <a class="lienProjet" href="https://liyanasc.github.io/pat-et-jo/#/" target="_blank">
+                    <h3 class="titreLienProjet">Site vitine Pat et Jo</h3>
+                    <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation en ligne compatible tout support.</p>
+                    <p class="SuivrelienProjet">></p>
+                </a>
+            </div>
+       </section> 
+<!-------------------------------------------------------------------------CONTACTS-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="contacts" class="contacts">
             <div class="elementContacts">
                 <h2 class="titreContacts">Travaillons ensemble!</h2>
@@ -187,5 +213,4 @@
         </section>
     </main>
 </body>
-
 </html>
