continuation responsive (slide projet)

--- a/index.html
+++ b/index.html
@@ -158,25 +158,27 @@
 <!--------------------------------------------------------------------------PROJETS--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
        <section class="projets">
             <div class="elementProjets">
-                <h2 class="titreElementProjets">Quelques<br> réalisations web</h2>
-                <p class="sous-titreElementProjets">En dehors de ce site bien sur 😎 !</p>
-                <div>
+                <div class="titreProjets">
+                    <h2 class="titreElementProjets">Quelques<br> réalisations web</h2>
+                    <p class="sous-titreElementProjets">En dehors de ce site bien sur 😎 !</p>
+                </div>
+                <div class="divImageElementProjets">
                     <img class="imageElementProjets" src="./image/creativite.jpg" alt="image représentant la créativité">
                 </div>
             </div>
             <div class="elementProjetsDeux">
                 <a class="lienProjet" href="https://liyanasc.github.io/LINONDjouliana_2_03112020/P2_02_Reservia.html" target="_blank">
-                    <h3 class="titreLienProjet">Front-End Reservia</h3>
+                    <h3 class="titreLienProjet"> Reservia</h3>
                     <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation en ligne compatible tout support.</p>
                     <p class="SuivrelienProjet">></p>
                 </a>
                 <a class="lienProjet" href="https://liyanasc.github.io/LINONDjouliana_3_08122020/accueil.html" target="_blank">
-                    <h3 class="titreLienProjet">Front-End Oh my food!</h3>
+                    <h3 class="titreLienProjet tailleTitrespecifique"> Oh my food!</h3>
                     <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de commande en ligne compatible tout support avec animation au survol.</p>
                     <p class="SuivrelienProjet">></p>
                 </a>
                 <a class="lienProjet" href="https://liyanasc.github.io/pat-et-jo/#/" target="_blank">
-                    <h3 class="titreLienProjet">Site vitine Pat et Jo</h3>
+                    <h3 class="titreLienProjet"> Pat et Jo</h3>
                     <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation en ligne compatible tout support.</p>
                     <p class="SuivrelienProjet">></p>
                 </a>
