ajout de l'encre mes projets et modifications de la couleur (elementCitationDeux)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a class="elementheader" href="#profile">Profile</a>
             <a class="elementheader" href="#service">Services</a>
             <a class="elementheader" href="#clients">Clients</a>
+            <a class="elementheader" href="#projets">Mes projets</a>
             <a class="elementheader" href="#contacts">Contacts</a>
         </div>
     </header>
@@ -114,7 +115,7 @@
             <blockquote class="elementCitation">
                 <p class="textecitation">“<em> Je propose des services complets, tels que la<br> gestion de votre administratif, le développement de <br>votre site vitrine, la création de rapports pertinents,<br>ainsi que la gestion efficace de vos réseaux sociaux,<br> afin d'optimiser votre présence en ligne et renforcer <br>votre impact commercial</em>."</p>
                 <footer class="elementCitationDeux">
-                    <p>Votre future Assistante</p>
+                    <p>Votre future Assistante.</p>
                 </footer>
             </blockquote>
         </section>
@@ -156,7 +157,7 @@
             </footer>
         </section>
 <!--------------------------------------------------------------------------PROJETS--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-       <section class="projets">
+       <section id="projets" class="projets">
             <div class="elementProjets">
                 <div class="titreProjets">
                     <h2 class="titreElementProjets">Quelques<br> réalisations web</h2>
@@ -173,7 +174,7 @@
                     <p class="SuivrelienProjet">></p>
                 </a>
                 <a class="lienProjet" href="https://liyanasc.github.io/LINONDjouliana_3_08122020/accueil.html" target="_blank">
-                    <h3 class="titreLienProjet tailleTitrespecifique"> Oh my food!</h3>
+                    <h3 class="titreLienProjet"> Oh my food!</h3>
                     <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de commande en ligne compatible tout support avec animation au survol.</p>
                     <p class="SuivrelienProjet">></p>
                 </a>
