continuation icon sidebar + correction css

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
         <div class="sidebarIcons">
             <a class="elementheader" href="#home"><img src="image/home.svg" alt="Home"></a>
             <a class="elementheader" href="#profile"><img src="image/perso.svg" alt="Profile"></a>
-            <a class="elementheader" href="#service"><img src="image/to-do.svg" alt="Services"></a>
-            <a class="elementheader" href="#clients"><img src="image/coach.svg" alt=""></a>
+            <a class="elementheader" href="#clients"><img src="image/coach.svg" alt="Formations"></a>
             <a class="elementheader" href="#projets"><img src="image/portfolio.svg" alt="Mes projets"></a>
-            <a class="elementheader" href="#contacts"><img src="image/contact.svg" alt=""></a>
+            <a class="elementheader" href="#contacts"><img src="image/contact.svg" alt="Contacts"></a>
         </div>
     </header>
     <!--------------------------------------------------------------------------------HOME------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
@@ -169,7 +168,6 @@
             <div class="elementProjets">
                 <div class="titreProjets">
                     <h2 class="titreElementProjets">Quelques réalisations</h2>
-                    <p class="sous-titreElementProjets">En dehors de ce site bien sur 😎 !</p>
                 </div>
                 <div class="divImageElementProjets">
                     <img class="imageElementProjets" src="./image/creativite.jpg" alt="image représentant la créativité">
