--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -191,21 +192,16 @@
                     <p class="SuivrelienProjet">></p>
                 </a>
             </div>
-            <h2 class="titreElementProjets">Analyse</h2>
+            <h2 class="titreElementProjets">Analyses</h2>
             <div class="elementProjetsDeux">
-                <a class="lienProjet" href="https://liyanasc.github.io/LINONDjouliana_2_03112020/P2_02_Reservia.html" target="_blank">
-                    <h3 class="titreLienProjet"> Reservia</h3>
-                    <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation en ligne compatible tout support.</p>
+                <a class="lienProjet" href="https://drive.google.com/file/d/19jFd8icc3hCXYp9ANr62PJMAvhpHvE6P/view?usp=sharing" target="_blank">
+                    <h3 class="titreLienProjet"> Budget du foyer</h3>
+                    <p class="texteLienProjet">Analyse des ressources et des dépenses d'un foyer, accompagnée de recommandations pour élaborer un plan visant à réaliser des économies.</p>
                     <p class="SuivrelienProjet">></p>
                 </a>
-                <a class="lienProjet" href="https://liyanasc.github.io/LINONDjouliana_3_08122020/accueil.html" target="_blank">
-                    <h3 class="titreLienProjet"> Oh my food!</h3>
-                    <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de commande en ligne compatible tout support avec animation au survol.</p>
-                    <p class="SuivrelienProjet">></p>
-                </a>
-                <a class="lienProjet" href="https://liyanasc.github.io/pat-et-jo/#/" target="_blank">
-                    <h3 class="titreLienProjet"> Pat et Jo</h3>
-                    <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation en ligne compatible tout support.</p>
+                <a class="lienProjet" href="https://drive.google.com/file/d/1EvzhbJwS7A6eAmKD42haVc8d_cpl2wDH/view?usp=sharing" target="_blank">
+                    <h3 class="titreLienProjet"> Fichier de caisse</h3>
+                    <p class="texteLienProjet">récapitulatif des transactions financières, telles que les ventes, les paiements et les remboursements, pour assurer le suivi précis des mouvements monétaires.</p>
                     <p class="SuivrelienProjet">></p>
                 </a>
             </div>
@@ -240,6 +236,7 @@
             </div>
         </section>
     </main>
+
 </body>
 
 </html>
